# gollum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gollum.h  objects.h
src/: main.cpp
src/commands/: add.cpp  branch.cpp  cat-file.cpp  commit-tree.cpp  commit.cpp  init.cpp  log.cpp  switch.cpp  update-ref.cpp
src/utils/: gollum.cpp  head.cpp  objects.cpp
